Fix integration test under Java 17.